Add hdbh object to cristin import model (#1534)
* mapping nvi related field from h_dbh table

* mapping person_kontrollert field

* adding fbh_forskres_kontroll to ignored json properties